# crypto-file-storage

./: .gitignore  README.md
backend/: docker-compose.yml
backend/api/: .env.example   alembic.ini  pyproject.toml
backend/api/app/: main.py
backend/api/app/core/: database.py  settings.py
backend/api/app/models/: base.py  file.py  user.py
backend/api/app/routers/: __init__.py  files.py  user.py
backend/api/app/schemas/: file.py  user.py
backend/api/app/services/: file_service.py  user.py
backend/api/migrations/: env.py
backend/api/migrations/versions/: 2024-12-15_add_password_to_user.py  2024-12-15_init.py  2024-12-15_init_models.py  2024-12-15_init_models_2.py
client/: client.py  requirements.txt
